# record_matching

./: .gitignore  README.md  flake.nix  pyproject.toml
claude_poc/: README.md  entity-resolution_v4.py  predicted_matches.csv
claude_poc/blocking_analysis_20250224_143309/: blocking_analysis_report.txt
claude_poc_v2/: README.md  run-vector-enhanced-resolution.py  vector_enhanced_entity_resolution_v2.py
claude_poc_v2/vector_results/: canonical_entities.csv  disambiguation_details.txt  evaluation_metrics.json  resolved_entities.csv  training_metrics.json  vector_resolver_model.json  vector_resolver_model.json.sklearn
claude_poc_v2/vector_results/bak/: disambiguation_details.txt  resolved_entities.csv
nix/: uv-python.nix  uv-shell.nix
record_matching/: context.py  main.py
vl_datafusion_example/: context.py  main.py
